--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="Обзор 1win Casino: бонусы, фишки, FAQ. 18+." />
   <meta name="robots" content="index,follow,max-image-preview:large" />
 
-  <!-- чтобы контент не пропадал, если JS не сработал -->
   <script>document.documentElement.classList.add('js');</script>
 
   <style>
@@ -49,7 +48,6 @@
     .muted{color:var(--muted)}
     .small{font-size:13px}
 
-    /* progress */
     .progress{
       position:fixed;left:0;top:0;height:2px;width:0%;
       background: linear-gradient(90deg, rgba(69,227,255,0), rgba(69,227,255,.85), rgba(123,97,255,.70));
@@ -57,7 +55,6 @@
       z-index:100;
     }
 
-    /* Topbar */
     .topbar{
       position:sticky;top:0;z-index:60;
       background: rgba(6,9,18,.55);
@@ -95,7 +92,6 @@
       transform: translateY(-1px);
     }
 
-    /* Buttons */
     .btn{
       display:inline-flex;align-items:center;justify-content:center;gap:10px;
       padding:11px 14px;border-radius:14px;
@@ -131,7 +127,6 @@
       box-shadow: 0 0 18px rgba(69,227,255,.22);
     }
 
-    /* Cards */
     .card{
       border:1px solid rgba(255,255,255,.10);
       background: linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03));
@@ -153,7 +148,6 @@
     }
     .card > *{position:relative}
 
-    /* reveal: без JS видно всегда */
     .reveal{opacity:1; transform:none;}
     .js .reveal{opacity:0;transform: translateY(18px) scale(.985);transition:.7s var(--ease)}
     .js .reveal.on{opacity:1;transform: translateY(0) scale(1)}
@@ -168,7 +162,7 @@
     }
     .tilt:hover .shine{opacity:.9}
 
-    /* HERO with image */
+    /* HERO */
     .hero{
       position:relative;
       min-height: calc(100vh - 62px);
@@ -176,6 +170,8 @@
       align-items:stretch;
       padding: 22px 0 34px;
       isolation:isolate;
+
+      overflow:hidden; /* IMPORTANT: режем шов */
     }
     .hero::before{
       content:"";
@@ -189,7 +185,7 @@
     }
     .heroBg{
       position:absolute; inset:0;
-      background-image: url("hero.jpg");  /* <-- положи фотку рядом и назови hero.jpg */
+      background-image: url("hero.jpg");
       background-size: cover;
       background-position: center;
       filter: saturate(1.05) contrast(1.06);
@@ -202,6 +198,24 @@
         linear-gradient(180deg, rgba(4,7,18,.90) 0%, rgba(4,7,18,.55) 35%, rgba(4,7,18,.85) 100%),
         radial-gradient(900px 460px at 50% 55%, rgba(0,0,0,.20), rgba(0,0,0,.72));
       z-index:-1;
+      pointer-events:none;
+    }
+
+    /* NEW: размытый переход, который скрывает линию */
+    .hero .edgeBlur{
+      position:absolute;
+      left:-10%;
+      right:-10%;
+      bottom:-55px;
+      height:140px;
+      background: linear-gradient(180deg,
+        rgba(4,7,18,0) 0%,
+        rgba(4,7,18,.55) 45%,
+        rgba(4,7,18,.92) 100%
+      );
+      filter: blur(18px);
+      opacity: 1;
+      z-index: 3;          /* под промо, над фоном */
       pointer-events:none;
     }
 
@@ -221,7 +235,7 @@
       gap:14px;
       align-items:start;
       padding-top: 10px;
-      padding-bottom: 90px; /* место под нижнюю длинную карточку */
+      padding-bottom: 90px;
     }
     @media (max-width: 980px){
       .heroGrid{grid-template-columns:1fr; padding-bottom: 120px;}
@@ -233,7 +247,6 @@
       border:1px solid rgba(255,255,255,.10);
       background: rgba(255,255,255,.03);
       box-shadow: var(--shadow2);
-      position:relative; overflow:hidden;
       transition: transform .22s var(--ease), border-color .22s var(--ease);
     }
     .mini:hover{transform: translateY(-2px); border-color: rgba(69,227,255,.22)}
@@ -245,12 +258,12 @@
       margin: 14px 0;
     }
 
-    /* Bottom long promo card in hero */
+    /* PROMO */
     .promoWrap{
       position:absolute;
       left: 0; right: 0;
       bottom: 18px;
-      z-index: 5;
+      z-index: 6; /* выше edgeBlur */
     }
     .promoBar{
       display:flex;
@@ -262,93 +275,28 @@
     @media (max-width: 820px){
       .promoBar{flex-direction:column; align-items:stretch}
     }
-
-    .promoLeft{
-      display:flex; flex-direction:column; gap:6px;
-      min-width: 260px;
-    }
-    .promoTitle{
-      font-size: 14px;
-      font-weight: 1000;
-      color: rgba(234,240,255,.90);
-      letter-spacing: .15px;
-    }
-    .promoSub{
-      font-size: 13px;
-      color: rgba(234,240,255,.70);
-    }
+    .promoLeft{display:flex; flex-direction:column; gap:6px; min-width: 260px;}
+    .promoTitle{font-size: 14px;font-weight: 1000;color: rgba(234,240,255,.90);letter-spacing: .15px;}
+    .promoSub{font-size: 13px;color: rgba(234,240,255,.70);}
 
     .codeBox{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:10px;
-      padding: 12px 14px;
-      border-radius: 18px;
+      display:flex;align-items:center;justify-content:space-between;gap:10px;
+      padding: 12px 14px;border-radius: 18px;
       border: 1px solid rgba(69,227,255,.28);
       background: rgba(7,12,22,.55);
       box-shadow: 0 18px 55px rgba(0,0,0,.50);
       backdrop-filter: blur(12px);
-      flex: 1;
-      min-height: 54px;
-      cursor:pointer;
-      user-select:none;
+      flex: 1; min-height: 54px;
+      cursor:pointer; user-select:none;
       transition: transform .2s var(--ease), border-color .2s var(--ease);
     }
     .codeBox:hover{transform: translateY(-1px); border-color: rgba(69,227,255,.45)}
-    .codeText{
-      display:flex; align-items:baseline; gap:10px; flex-wrap:wrap;
-    }
-    .codeLabel{
-      font-size: 12px;
-      font-weight: 900;
-      color: rgba(234,240,255,.70);
-    }
-    .codeValue{
-      font-size: 22px;
-      font-weight: 1100;
-      letter-spacing: 1.6px;
-      color: rgba(234,240,255,.95);
-      text-transform: uppercase;
-    }
-    .copyHint{
-      font-size: 12px;
-      color: rgba(234,240,255,.65);
-      white-space: nowrap;
-    }
+    .codeText{display:flex; align-items:baseline; gap:10px; flex-wrap:wrap;}
+    .codeLabel{font-size: 12px;font-weight: 900;color: rgba(234,240,255,.70);}
+    .codeValue{font-size: 22px;font-weight: 1100;letter-spacing: 1.6px;color: rgba(234,240,255,.95);text-transform: uppercase;}
+    .copyHint{font-size: 12px;color: rgba(234,240,255,.65);white-space: nowrap;}
 
-    /* toast */
-    .toast{
-      position:fixed;left:50%;bottom:18px;transform: translateX(-50%);
-      background: rgba(6,9,18,.78);
-      border:1px solid rgba(255,255,255,.10);
-      box-shadow: var(--shadow);
-      border-radius:16px;
-      padding:10px 12px;
-      display:none;
-      z-index:99;
-      backdrop-filter: blur(12px);
-      max-width:min(760px, calc(100% - 20px));
-    }
-    .toast.on{display:flex;align-items:center;gap:10px}
-    .dot{
-      width:10px;height:10px;border-radius:999px;
-      background: radial-gradient(circle at 30% 30%, #fff, rgba(69,227,255,.95));
-      box-shadow: 0 0 18px rgba(69,227,255,.50)
-    }
-    .toast b{white-space:nowrap}
-    .toast .x{
-      margin-left:auto;
-      border:1px solid rgba(255,255,255,.12);
-      background: rgba(255,255,255,.04);
-      color:var(--text);
-      border-radius:12px;
-      padding:6px 10px;
-      cursor:pointer;
-      font-weight:1000;
-    }
-
-    /* Sections after hero */
+    /* Sections */
     .section{padding: 14px 0 34px}
     .quad{
       display:grid;
@@ -368,9 +316,6 @@
       font-size:12px;
       cursor:pointer;
       transition:.2s var(--ease);
-      user-select:none;
-      position:relative;
-      overflow:hidden;
       color: rgba(234,240,255,.86);
     }
     .tab:hover{transform: translateY(-1px)}
@@ -391,7 +336,7 @@
       min-height: 100px;
       transition: opacity .2s var(--ease), transform .2s var(--ease);
     }
-    .panel h3{margin:0 0 6px;font-size:16px;letter-spacing:-.15px}
+    .panel h3{margin:0 0 6px;font-size:16px}
     .panel p{margin:0;color: rgba(234,240,255,.76)}
 
     details{
@@ -402,13 +347,7 @@
       margin:10px 0;
       box-shadow: var(--shadow2);
     }
-    summary{
-      cursor:pointer;
-      list-style:none;
-      display:flex;align-items:center;justify-content:space-between;gap:10px;
-      font-weight:1000;
-      color: rgba(234,240,255,.92);
-    }
+    summary{cursor:pointer;list-style:none;display:flex;justify-content:space-between;gap:10px;font-weight:1000}
     summary::-webkit-details-marker{display:none}
 
     footer{
@@ -427,6 +366,26 @@
     }
     .links a:hover{color:var(--text);border-color: rgba(255,255,255,.10);background: rgba(255,255,255,.03)}
 
+    .toast{
+      position:fixed;left:50%;bottom:18px;transform: translateX(-50%);
+      background: rgba(6,9,18,.78);
+      border:1px solid rgba(255,255,255,.10);
+      box-shadow: var(--shadow);
+      border-radius:16px;
+      padding:10px 12px;
+      display:none;
+      z-index:99;
+      backdrop-filter: blur(12px);
+      max-width:min(760px, calc(100% - 20px));
+    }
+    .toast.on{display:flex;align-items:center;gap:10px}
+    .dot{width:10px;height:10px;border-radius:999px;background: radial-gradient(circle at 30% 30%, #fff, rgba(69,227,255,.95));box-shadow: 0 0 18px rgba(69,227,255,.50)}
+    .toast .x{
+      margin-left:auto;border:1px solid rgba(255,255,255,.12);
+      background: rgba(255,255,255,.04);color:var(--text);
+      border-radius:12px;padding:6px 10px;cursor:pointer;font-weight:1000;
+    }
+
     /* Floating CTA */
     .float{
       position:fixed;right:16px;bottom:16px;z-index:80;
@@ -442,21 +401,10 @@
       transition:.35s var(--ease);
     }
     .float.on{transform: translateY(0);opacity:1;pointer-events:auto}
-    .float .d{
-      width:10px;height:10px;border-radius:999px;
-      background: radial-gradient(circle at 30% 30%, #fff, rgba(69,227,255,.95));
-      box-shadow: 0 0 18px rgba(69,227,255,.50)
-    }
+    .float .d{width:10px;height:10px;border-radius:999px;background: radial-gradient(circle at 30% 30%, #fff, rgba(69,227,255,.95));box-shadow: 0 0 18px rgba(69,227,255,.50)}
     .float .t{font-weight:1000;font-size:13px;line-height:1.1}
     .float .s{font-size:12px;color: rgba(234,240,255,.68);margin-top:2px}
-    .float .go{
-      margin-left:6px;
-      padding:8px 10px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.12);
-      background: rgba(255,255,255,.04);
-      font-weight:1000;
-      transition:.2s var(--ease);
-    }
+    .float .go{margin-left:6px;padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.12);background: rgba(255,255,255,.04);font-weight:1000;transition:.2s var(--ease);}
     .float .go:hover{transform: translateY(-1px)}
 
     @keyframes spin{to{transform: rotate(360deg)}}
@@ -467,7 +415,7 @@
     }
 
     @media (prefers-reduced-motion: reduce){
-      *{animation:none !important;transition:none !important;scroll-behavior:auto !important}
+      *{animation:none !important;transition:none !important}
       .reveal{opacity:1;transform:none}
     }
   </style>
@@ -498,7 +446,6 @@
   </header>
 
   <main>
-    <!-- HERO -->
     <section class="hero" id="top">
       <div class="heroBg" aria-hidden="true"></div>
       <div class="heroShade" aria-hidden="true"></div>
@@ -507,18 +454,14 @@
         <div class="card reveal tilt" data-tilt>
           <div class="shine"></div>
           <h1>1win Casino — бонусы и фишки</h1>
-          <p class="lead">
-            Быстрый обзор: акции, бонусы и то, что обычно проверяют перед активацией.
-          </p>
+          <p class="lead">Быстрый обзор: акции, бонусы и то, что обычно проверяют перед активацией.</p>
           <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:14px">
             <a class="btn btn-primary" data-cta href="#" target="_blank" rel="nofollow sponsored noopener">
               <span class="icon" aria-hidden="true"></span>Открыть 1win
             </a>
             <a class="btn btn-ghost" href="#cards">Смотреть карточки</a>
           </div>
-          <p class="small muted" style="margin:12px 0 0">
-            18+ • Условия бонусов и промо могут меняться — проверяй актуальные правила на стороне 1win.
-          </p>
+          <p class="small muted" style="margin:12px 0 0">18+ • Условия бонусов могут меняться — проверяй правила на стороне 1win.</p>
         </div>
 
         <aside class="card reveal tilt" data-tilt>
@@ -538,10 +481,9 @@
         </aside>
       </div>
 
-      <!-- Bottom long promo card -->
       <div class="promoWrap">
         <div class="container">
-          <div class="card promoBar reveal" style="padding:14px 16px;">
+          <div class="card promoBar reveal">
             <div class="promoLeft">
               <div class="promoTitle">Промокод на бонус</div>
               <div class="promoSub">Нажми на код — он скопируется при нажатии</div>
@@ -562,9 +504,11 @@
           </div>
         </div>
       </div>
+
+      <!-- NEW: blur to hide seam -->
+      <div class="edgeBlur" aria-hidden="true"></div>
     </section>
 
-    <!-- CONTENT -->
     <section class="section" id="cards">
       <div class="container">
         <div class="quad">
@@ -639,9 +583,7 @@
           <div class="card reveal tilt" data-tilt>
             <div class="shine"></div>
             <h2 style="margin:0 0 8px">Гайд</h2>
-            <p class="muted" style="margin:0">
-              Выбирай акцию → читаешь условия → сравниваешь ограничения → только потом активируешь.
-            </p>
+            <p class="muted" style="margin:0">Выбирай акцию → читаешь условия → сравниваешь ограничения → потом активируешь.</p>
           </div>
         </div>
 
@@ -719,7 +661,6 @@
   </div>
 
   <script>
-    // ===== link =====
     const AFF = "https://1wfafs.life/casino/list?open=register&p=7jns";
     document.querySelectorAll("[data-cta]").forEach(a => {
       a.href = AFF;
@@ -727,7 +668,6 @@
       a.rel = "nofollow sponsored noopener";
     });
 
-    // ===== smooth scroll =====
     document.addEventListener("click", (e) => {
       const a = e.target.closest('a[href^="#"]');
       if (!a) return;
@@ -739,7 +679,6 @@
       history.replaceState(null, "", id);
     });
 
-    // ===== reveal (безопасно) =====
     try{
       const io = new IntersectionObserver((entries)=> {
         for (const ent of entries) if (ent.isIntersecting) ent.target.classList.add("on");
@@ -749,7 +688,6 @@
       document.querySelectorAll(".reveal").forEach(el => el.classList.add("on"));
     }
 
-    // ===== tabs =====
     const panel = document.getElementById("panel");
     const tabs = [...document.querySelectorAll(".tab")];
     const TAB = {
@@ -768,7 +706,6 @@
     }
     tabs.forEach(t=> t.addEventListener("click", ()=> setTab(t.dataset.tab)));
 
-    // ===== tilt =====
     const tiltEls = [...document.querySelectorAll("[data-tilt]")];
     const clamp = (n,a,b)=> Math.max(a, Math.min(b,n));
     tiltEls.forEach(el=>{
@@ -785,7 +722,6 @@
       el.addEventListener("pointerleave", ()=> { el.style.transform=""; }, {passive:true});
     });
 
-    // ===== progress + floating CTA =====
     const progress = document.getElementById("progress");
     const float = document.getElementById("float");
     function onScroll(){
@@ -797,7 +733,6 @@
     addEventListener("scroll", onScroll, {passive:true});
     onScroll();
 
-    // ===== toast =====
     const toast = document.getElementById("toast");
     const toastText = document.getElementById("toastText");
     const toastClose = document.getElementById("toastClose");
@@ -809,10 +744,8 @@
     }
     toastClose?.addEventListener("click", ()=> toast.classList.remove("on"));
 
-    // ===== PROMO COPY =====
     const promoValue = "SMOG";
     const promoCopy = document.getElementById("promoCopy");
-
     async function copyText(txt){
       try{
         await navigator.clipboard.writeText(txt);
@@ -833,14 +766,11 @@
         }
       }
     }
-
     function onPromoClick(){
       copyText(promoValue).then(ok=>{
-        if(ok) showToast("Промокод: " + promoValue);
-        else showToast("Не удалось скопировать");
+        showToast(ok ? ("Промокод: " + promoValue) : "Не удалось скопировать");
       });
     }
-
     promoCopy?.addEventListener("click", onPromoClick);
     promoCopy?.addEventListener("keydown", (e)=>{
       if(e.key === "Enter" || e.key === " "){ e.preventDefault(); onPromoClick(); }
