--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
-Сделал ✅
-
-* **убрал карточку** “1win Casino — бонусы” (ту, что на скрине)
-* заменил “клуб lucky jet” → **“1win”** в FAQ
-* **сильнее осветлил hero.jpg**
-* **снег теперь “настоящий”**: не точки по прямой вниз, а снежинки с разным размером, скоростью, боковым дрейфом и лёгким “вихрем” (canvas)
-* добавил **мягкую гирлянду/блики сверху** (очень аккуратно)
-
-Ниже готовый файл целиком (копируй и замени свой):
-
-```html
 <!doctype html>
+<!-- ВАЖНО: файл должен начинаться С ЭТОЙ СТРОКИ. УДАЛИ любой текст/символы выше doctype -->
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
@@ -190,78 +180,36 @@
       background:
         radial-gradient(1000px 520px at 20% 12%, rgba(43,140,255,.28), transparent 60%),
         radial-gradient(950px 520px at 85% 8%, rgba(69,227,255,.18), transparent 62%),
-        linear-gradient(180deg, rgba(3,6,16,.80), rgba(3,6,16,.28));
+        linear-gradient(180deg, rgba(3,6,16,.85), rgba(3,6,16,.35));
       z-index:-1;
       pointer-events:none;
     }
     .heroBg{
       position:absolute; inset:0;
-      background-image: url("hero.jpg"); /* положи рядом и назови hero.jpg */
+      background-image: url("hero.jpg");
       background-size: cover;
       background-position: center;
-      filter: brightness(1.30) saturate(1.10) contrast(1.04); /* сильнее осветлил */
-      transform: scale(1.03);
+      filter: brightness(1.18) saturate(1.08) contrast(1.05); /* аккуратно осветлил */
+      transform: scale(1.02);
       z-index:-2;
     }
     .heroShade{
       position:absolute; inset:0;
       background:
-        linear-gradient(180deg, rgba(4,7,18,.82) 0%, rgba(4,7,18,.42) 35%, rgba(4,7,18,.78) 100%),
-        radial-gradient(900px 460px at 50% 55%, rgba(0,0,0,.12), rgba(0,0,0,.62));
+        linear-gradient(180deg, rgba(4,7,18,.88) 0%, rgba(4,7,18,.50) 35%, rgba(4,7,18,.82) 100%),
+        radial-gradient(900px 460px at 50% 55%, rgba(0,0,0,.18), rgba(0,0,0,.68));
       z-index:-1;
       pointer-events:none;
     }
 
-    /* NEW: гирлянда / блики сверху (мягко) */
-    .garland{
-      position:absolute;
-      left:-10%;
-      right:-10%;
-      top:-10px;
-      height:130px;
-      z-index:2;
-      pointer-events:none;
-      opacity:.55;
-      filter: blur(.2px);
-      mix-blend-mode: screen;
-    }
-    .garland:before{
-      content:"";
-      position:absolute; inset:0;
-      background:
-        radial-gradient(18px 18px at 6% 42%, rgba(255,255,255,.65), rgba(255,255,255,0) 60%),
-        radial-gradient(22px 22px at 12% 52%, rgba(69,227,255,.55), rgba(69,227,255,0) 62%),
-        radial-gradient(20px 20px at 18% 44%, rgba(123,97,255,.50), rgba(123,97,255,0) 62%),
-        radial-gradient(24px 24px at 24% 56%, rgba(255,255,255,.55), rgba(255,255,255,0) 63%),
-        radial-gradient(20px 20px at 30% 46%, rgba(69,227,255,.52), rgba(69,227,255,0) 62%),
-        radial-gradient(24px 24px at 36% 58%, rgba(123,97,255,.48), rgba(123,97,255,0) 63%),
-        radial-gradient(20px 20px at 42% 44%, rgba(255,255,255,.55), rgba(255,255,255,0) 62%),
-        radial-gradient(22px 22px at 48% 56%, rgba(69,227,255,.50), rgba(69,227,255,0) 62%),
-        radial-gradient(20px 20px at 54% 46%, rgba(123,97,255,.46), rgba(123,97,255,0) 63%),
-        radial-gradient(24px 24px at 60% 58%, rgba(255,255,255,.52), rgba(255,255,255,0) 64%),
-        radial-gradient(20px 20px at 66% 44%, rgba(69,227,255,.48), rgba(69,227,255,0) 62%),
-        radial-gradient(24px 24px at 72% 56%, rgba(123,97,255,.44), rgba(123,97,255,0) 64%),
-        radial-gradient(20px 20px at 78% 46%, rgba(255,255,255,.50), rgba(255,255,255,0) 62%),
-        radial-gradient(24px 24px at 84% 58%, rgba(69,227,255,.46), rgba(69,227,255,0) 63%),
-        radial-gradient(20px 20px at 90% 44%, rgba(123,97,255,.42), rgba(123,97,255,0) 64%),
-        radial-gradient(24px 24px at 96% 56%, rgba(255,255,255,.46), rgba(255,255,255,0) 64%),
-        linear-gradient(180deg, rgba(0,0,0,.20), rgba(0,0,0,0) 70%);
-      animation: twinkle 3.8s ease-in-out infinite;
-      opacity:.95;
-    }
-    @keyframes twinkle{
-      0%,100%{filter: brightness(1)}
-      50%{filter: brightness(1.10)}
-    }
-
-    /* NEW: снег canvas */
+    /* СНЕГ (красивый, без “точек вниз”, без блеклого мусора) */
     .snowCanvas{
       position:absolute;
       inset:0;
       z-index:2;
       pointer-events:none;
-      opacity:.78;
-      mix-blend-mode: screen;
+      opacity:.60;
+      filter: blur(.15px);
     }
 
     /* blur to hide seam */
@@ -299,7 +247,7 @@
       align-items:start;
       justify-items:center;
       padding-top: 10px;
-      padding-bottom: 160px; /* меньше, т.к. верхнюю карточку удалили */
+      padding-bottom: 160px;
       position:relative;
       z-index: 4;
     }
@@ -503,10 +451,7 @@
       <div class="heroBg" aria-hidden="true"></div>
       <div class="heroShade" aria-hidden="true"></div>
 
-      <!-- гирлянда -->
-      <div class="garland" aria-hidden="true"></div>
-
-      <!-- снег canvas -->
+      <!-- Снег (красиво и мягко) -->
       <canvas id="snowCanvas" class="snowCanvas" aria-hidden="true"></canvas>
 
       <div class="container heroGrid">
@@ -531,7 +476,7 @@
 
       <div class="promoWrap">
         <div class="container">
-          <!-- верхнюю карточку (со скрина) УБРАЛ -->
+          <!-- карточку “1win Casino — бонусы” (как на твоём скрине) УБРАЛ -->
           <div class="card promoBar reveal">
             <div class="promoLeft">
               <div class="promoTitle">Промокод на бонус</div>
@@ -787,7 +732,7 @@
       if(e.key === "Enter" || e.key === " "){ e.preventDefault(); onPromoClick(); }
     });
 
-    // NEW: снег (не точки вниз — а снежинки с дрейфом/вихрем)
+    // СНЕГ: аккуратные снежинки (не “точки вниз”), без свечения-орбов
     (function(){
       const reduce = matchMedia?.("(prefers-reduced-motion: reduce)")?.matches;
       const canvas = document.getElementById("snowCanvas");
@@ -796,116 +741,100 @@
       const ctx = canvas.getContext("2d");
       let w=0,h=0,dpr=1;
       const flakes = [];
-      const FLAKE_COUNT = 140;
+      const COUNT = 110;
 
+      const rnd=(a,b)=>a+Math.random()*(b-a);
       function resize(){
         dpr = Math.max(1, Math.min(2, devicePixelRatio || 1));
-        w = canvas.clientWidth;
-        h = canvas.clientHeight;
+        w = canvas.clientWidth; h = canvas.clientHeight;
         canvas.width = Math.floor(w*dpr);
         canvas.height = Math.floor(h*dpr);
         ctx.setTransform(dpr,0,0,dpr,0,0);
       }
 
-      function rnd(a,b){ return a + Math.random()*(b-a); }
-
       function makeFlake(){
-        const r = rnd(0.8, 3.2);
+        const r = rnd(1.2, 3.6);
         return {
-          x: rnd(0, w),
-          y: rnd(-h, 0),
+          x: rnd(0,w),
+          y: rnd(-h,0),
           r,
-          vy: rnd(0.45, 1.35) * (0.7 + r/3.2),
-          vx: rnd(-0.25, 0.25),
-          a: rnd(0.35, 0.9),
-          phase: rnd(0, Math.PI*2),
-          wobble: rnd(0.6, 1.6),
-          spin: rnd(-0.02, 0.02)
+          vy: rnd(0.35, 1.05) * (0.75 + r/3.6),
+          vx: rnd(-0.18, 0.18),
+          a: rnd(0.28, 0.75),
+          rot: rnd(0, Math.PI*2),
+          spin: rnd(-0.02, 0.02),
+          wob: rnd(0.6, 1.3),
+          seed: rnd(0, 9999)
         };
       }
-
       function reset(f){
-        f.x = rnd(0, w);
-        f.y = rnd(-40, -10);
+        f.x = rnd(0,w);
+        f.y = rnd(-40,-10);
       }
 
-      function drawSnowflake(f){
-        // маленькие — мягкие точки, большие — "снежинка" (6 лучей)
-        if(f.r < 2.2){
-          ctx.beginPath();
-          ctx.arc(f.x, f.y, f.r, 0, Math.PI*2);
-          ctx.fill();
-          return;
-        }
+      function drawFlake(f){
         const arms = 6;
-        const len = f.r * 2.2;
+        const len = f.r * 2.0;
         ctx.save();
         ctx.translate(f.x, f.y);
-        ctx.rotate(f.phase);
+        ctx.rotate(f.rot);
         ctx.beginPath();
         for(let i=0;i<arms;i++){
           const ang = (Math.PI*2/arms)*i;
           ctx.moveTo(0,0);
           ctx.lineTo(Math.cos(ang)*len, Math.sin(ang)*len);
-          // маленькие “веточки”
+
           const bx = Math.cos(ang)*len*0.55;
           const by = Math.sin(ang)*len*0.55;
-          const side = 0.55;
+          const s = len*0.22;
           ctx.moveTo(bx,by);
-          ctx.lineTo(bx + Math.cos(ang+Math.PI/3)*len*0.28*side, by + Math.sin(ang+Math.PI/3)*len*0.28*side);
+          ctx.lineTo(bx + Math.cos(ang+Math.PI/3)*s, by + Math.sin(ang+Math.PI/3)*s);
           ctx.moveTo(bx,by);
-          ctx.lineTo(bx + Math.cos(ang-Math.PI/3)*len*0.28*side, by + Math.sin(ang-Math.PI/3)*len*0.28*side);
+          ctx.lineTo(bx + Math.cos(ang-Math.PI/3)*s, by + Math.sin(ang-Math.PI/3)*s);
         }
         ctx.stroke();
         ctx.restore();
       }
 
       let last = performance.now();
+      let wind = 0, windTarget = 0;
+
       function tick(t){
-        const dt = Math.min(32, t-last);
-        last = t;
+        const dt = Math.min(32, t-last); last=t;
+
+        // плавный ветер
+        if(Math.random() < 0.012) windTarget = rnd(-0.35, 0.35);
+        wind += (windTarget - wind) * 0.02;
 
         ctx.clearRect(0,0,w,h);
-
-        // лёгкий glow для "снега"
-        ctx.fillStyle = "rgba(255,255,255,0.85)";
         ctx.strokeStyle = "rgba(255,255,255,0.55)";
-        ctx.lineWidth = 1.1;
+        ctx.lineWidth = 1.05;
+        ctx.lineCap = "round";
 
         for(const f of flakes){
-          const sway = Math.sin((f.y*0.012) + f.phase) * f.wobble;
-          f.x += (f.vx + sway*0.08) * (dt/16);
+          const sway = Math.sin((f.y*0.012) + f.seed) * f.wob;
+          f.x += (f.vx + wind + sway*0.06) * (dt/16);
           f.y += f.vy * (dt/16);
-          f.phase += f.spin * (dt/16);
+          f.rot += f.spin * (dt/16);
 
-          if(f.y > h + 12) reset(f);
-          if(f.x < -20) f.x = w + 20;
-          if(f.x > w + 20) f.x = -20;
+          if(f.y > h + 14) reset(f);
+          if(f.x < -40) f.x = w + 40;
+          if(f.x > w + 40) f.x = -40;
 
-          ctx.save();
           ctx.globalAlpha = f.a;
-          ctx.shadowColor = "rgba(255,255,255,0.35)";
-          ctx.shadowBlur = f.r > 2.2 ? 8 : 4;
-          drawSnowflake(f);
-          ctx.restore();
+          drawFlake(f);
         }
 
+        ctx.globalAlpha = 1;
         requestAnimationFrame(tick);
       }
 
-      function init(){
-        resize();
-        flakes.length = 0;
-        for(let i=0;i<FLAKE_COUNT;i++) flakes.push(makeFlake());
-        requestAnimationFrame(tick);
-      }
-
+      resize();
+      flakes.length = 0;
+      for(let i=0;i<COUNT;i++) flakes.push(makeFlake());
       addEventListener("resize", resize, {passive:true});
-      init();
+      requestAnimationFrame(tick);
     })();
   </script>
 </body>
 </html>
-```
-
-Если хочешь — могу сделать снег ещё “пушистее”: добавить **ближний слой крупных снежинок** (медленнее, сильнее блюр) и **дальний слой мелкой метели** (почти туманом).
