--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!-- ВАЖНО: файл должен начинаться С ЭТОЙ СТРОКИ. УДАЛИ любой текст/символы выше doctype -->
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
@@ -189,7 +188,7 @@
       background-image: url("hero.jpg");
       background-size: cover;
       background-position: center;
-      filter: brightness(1.18) saturate(1.08) contrast(1.05); /* аккуратно осветлил */
+      filter: brightness(1.16) saturate(1.08) contrast(1.05);
       transform: scale(1.02);
       z-index:-2;
     }
@@ -202,14 +201,111 @@
       pointer-events:none;
     }
 
-    /* СНЕГ (красивый, без “точек вниз”, без блеклого мусора) */
-    .snowCanvas{
-      position:absolute;
-      inset:0;
+    /* 🎄 NEW YEAR VIBE (БЕЗ СНЕГА) */
+    .holiday{
+      position:absolute; inset:0;
       z-index:2;
       pointer-events:none;
-      opacity:.60;
+      overflow:hidden;
+    }
+    .holiday .aurora{
+      position:absolute; inset:-25%;
+      background:
+        radial-gradient(650px 320px at 20% 30%, rgba(69,227,255,.22), rgba(0,0,0,0) 60%),
+        radial-gradient(760px 380px at 82% 24%, rgba(123,97,255,.18), rgba(0,0,0,0) 62%),
+        radial-gradient(920px 520px at 55% 70%, rgba(43,140,255,.14), rgba(0,0,0,0) 65%);
+      filter: blur(24px);
+      opacity:.55;
+      mix-blend-mode: screen;
+      transform: translate3d(0,0,0);
+      animation: auroraMove 16s ease-in-out infinite;
+    }
+    .holiday .bokeh{
+      position:absolute; inset:-18%;
+      background:
+        radial-gradient(160px 160px at 12% 28%, rgba(255,255,255,.10), rgba(0,0,0,0) 62%),
+        radial-gradient(220px 220px at 26% 62%, rgba(69,227,255,.12), rgba(0,0,0,0) 64%),
+        radial-gradient(180px 180px at 72% 36%, rgba(123,97,255,.10), rgba(0,0,0,0) 66%),
+        radial-gradient(260px 260px at 88% 70%, rgba(43,140,255,.10), rgba(0,0,0,0) 66%),
+        radial-gradient(140px 140px at 54% 22%, rgba(255,255,255,.08), rgba(0,0,0,0) 62%);
+      filter: blur(10px);
+      opacity:.55;
+      mix-blend-mode: screen;
+      animation: bokehDrift 22s linear infinite;
+    }
+    .holiday .bokeh2{
+      position:absolute; inset:-18%;
+      background:
+        radial-gradient(260px 260px at 18% 78%, rgba(123,97,255,.09), rgba(0,0,0,0) 66%),
+        radial-gradient(200px 200px at 46% 40%, rgba(69,227,255,.10), rgba(0,0,0,0) 66%),
+        radial-gradient(240px 240px at 86% 20%, rgba(255,255,255,.07), rgba(0,0,0,0) 66%),
+        radial-gradient(180px 180px at 70% 78%, rgba(43,140,255,.09), rgba(0,0,0,0) 66%);
+      filter: blur(12px);
+      opacity:.42;
+      mix-blend-mode: screen;
+      animation: bokehDrift2 28s linear infinite;
+    }
+
+    /* гирлянда/огоньки сверху — аккуратно */
+    .holiday .garland{
+      position:absolute;
+      left:-10%; right:-10%;
+      top:-6px;
+      height:120px;
+      opacity:.68;
+      mix-blend-mode: screen;
       filter: blur(.15px);
+      background:
+        /* bulbs */
+        radial-gradient(18px 18px at 6% 46%, rgba(255,255,255,.55), rgba(255,255,255,0) 62%),
+        radial-gradient(22px 22px at 12% 58%, rgba(69,227,255,.52), rgba(69,227,255,0) 62%),
+        radial-gradient(20px 20px at 18% 48%, rgba(123,97,255,.48), rgba(123,97,255,0) 62%),
+        radial-gradient(24px 24px at 24% 60%, rgba(255,255,255,.48), rgba(255,255,255,0) 64%),
+        radial-gradient(20px 20px at 30% 50%, rgba(69,227,255,.46), rgba(69,227,255,0) 62%),
+        radial-gradient(24px 24px at 36% 62%, rgba(123,97,255,.44), rgba(123,97,255,0) 64%),
+        radial-gradient(20px 20px at 42% 48%, rgba(255,255,255,.46), rgba(255,255,255,0) 62%),
+        radial-gradient(22px 22px at 48% 60%, rgba(69,227,255,.44), rgba(69,227,255,0) 62%),
+        radial-gradient(20px 20px at 54% 50%, rgba(123,97,255,.42), rgba(123,97,255,0) 64%),
+        radial-gradient(24px 24px at 60% 62%, rgba(255,255,255,.44), rgba(255,255,255,0) 64%),
+        radial-gradient(20px 20px at 66% 48%, rgba(69,227,255,.42), rgba(69,227,255,0) 62%),
+        radial-gradient(24px 24px at 72% 60%, rgba(123,97,255,.40), rgba(123,97,255,0) 64%),
+        radial-gradient(20px 20px at 78% 50%, rgba(255,255,255,.42), rgba(255,255,255,0) 62%),
+        radial-gradient(24px 24px at 84% 62%, rgba(69,227,255,.40), rgba(69,227,255,0) 63%),
+        radial-gradient(20px 20px at 90% 48%, rgba(123,97,255,.38), rgba(123,97,255,0) 64%),
+        radial-gradient(24px 24px at 96% 60%, rgba(255,255,255,.40), rgba(255,255,255,0) 64%),
+        /* subtle string */
+        linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,0));
+      animation: garlandPulse 3.8s ease-in-out infinite;
+    }
+
+    /* искры-звёздочки (очень мягко) */
+    .holiday .sparkles{
+      position:absolute; inset:0;
+      opacity:.35;
+      mix-blend-mode: screen;
+      background-size: 260px 260px;
+      background-image: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='260'%20height='260'%3E%3Cg%20fill='none'%20stroke='white'%20stroke-opacity='.55'%20stroke-width='1'%20stroke-linecap='round'%3E%3Cpath%20d='M38%2040%20l6%200%20M41%2037%20l0%206'/%3E%3Cpath%20d='M208%2080%20l7%200%20M211%2076%20l0%207'/%3E%3Cpath%20d='M142%20142%20l8%200%20M146%20138%20l0%208'/%3E%3Cpath%20d='M70%20198%20l7%200%20M73%20195%20l0%207'/%3E%3Cpath%20d='M224%20208%20l6%200%20M227%20205%20l0%206'/%3E%3C/g%3E%3C/svg%3E");
+      animation: sparkleShift 7s ease-in-out infinite;
+      filter: blur(.15px);
+    }
+
+    /* light sweep по hero-карте */
+    .heroMain::after{
+      content:"";
+      position:absolute;
+      inset:-2px;
+      pointer-events:none;
+      background: linear-gradient(110deg,
+        rgba(255,255,255,0) 0%,
+        rgba(255,255,255,0) 42%,
+        rgba(69,227,255,.14) 50%,
+        rgba(255,255,255,0) 58%,
+        rgba(255,255,255,0) 100%
+      );
+      transform: translateX(-140%);
+      opacity:.70;
+      mix-blend-mode: screen;
+      animation: cardSweep 6.8s ease-in-out infinite;
     }
 
     /* blur to hide seam */
@@ -417,6 +513,36 @@
       100%{transform: translateX(140%)}
     }
 
+    /* holiday animations */
+    @keyframes auroraMove{
+      0%,100%{transform: translate3d(-2%, -1%, 0) scale(1.02)}
+      50%{transform: translate3d(2%, 1%, 0) scale(1.03)}
+    }
+    @keyframes bokehDrift{
+      0%{transform: translate3d(-1%, 0%, 0)}
+      50%{transform: translate3d(2%, 1%, 0)}
+      100%{transform: translate3d(-1%, 0%, 0)}
+    }
+    @keyframes bokehDrift2{
+      0%{transform: translate3d(2%, -1%, 0)}
+      50%{transform: translate3d(-2%, 1%, 0)}
+      100%{transform: translate3d(2%, -1%, 0)}
+    }
+    @keyframes garlandPulse{
+      0%,100%{opacity:.62; filter: blur(.15px) brightness(1)}
+      50%{opacity:.80; filter: blur(.15px) brightness(1.08)}
+    }
+    @keyframes sparkleShift{
+      0%,100%{opacity:.22; transform: translate3d(0,0,0)}
+      50%{opacity:.40; transform: translate3d(12px, 8px, 0)}
+    }
+    @keyframes cardSweep{
+      0%{transform: translateX(-140%); opacity:0}
+      25%{opacity:.75}
+      55%{opacity:.75}
+      100%{transform: translateX(140%); opacity:0}
+    }
+
     @media (prefers-reduced-motion: reduce){
       *{animation:none !important;transition:none !important}
       .reveal{opacity:1;transform:none}
@@ -451,8 +577,14 @@
       <div class="heroBg" aria-hidden="true"></div>
       <div class="heroShade" aria-hidden="true"></div>
 
-      <!-- Снег (красиво и мягко) -->
-      <canvas id="snowCanvas" class="snowCanvas" aria-hidden="true"></canvas>
+      <!-- 🎄 NEW YEAR VIBE (без снега) -->
+      <div class="holiday" aria-hidden="true">
+        <div class="aurora"></div>
+        <div class="bokeh"></div>
+        <div class="bokeh2"></div>
+        <div class="sparkles"></div>
+        <div class="garland"></div>
+      </div>
 
       <div class="container heroGrid">
         <div class="card reveal tilt heroMain" data-tilt>
@@ -476,7 +608,6 @@
 
       <div class="promoWrap">
         <div class="container">
-          <!-- карточку “1win Casino — бонусы” (как на твоём скрине) УБРАЛ -->
           <div class="card promoBar reveal">
             <div class="promoLeft">
               <div class="promoTitle">Промокод на бонус</div>
@@ -731,110 +862,6 @@
     promoCopy?.addEventListener("keydown", (e)=>{
       if(e.key === "Enter" || e.key === " "){ e.preventDefault(); onPromoClick(); }
     });
-
-    // СНЕГ: аккуратные снежинки (не “точки вниз”), без свечения-орбов
-    (function(){
-      const reduce = matchMedia?.("(prefers-reduced-motion: reduce)")?.matches;
-      const canvas = document.getElementById("snowCanvas");
-      if(!canvas || reduce) return;
-
-      const ctx = canvas.getContext("2d");
-      let w=0,h=0,dpr=1;
-      const flakes = [];
-      const COUNT = 110;
-
-      const rnd=(a,b)=>a+Math.random()*(b-a);
-      function resize(){
-        dpr = Math.max(1, Math.min(2, devicePixelRatio || 1));
-        w = canvas.clientWidth; h = canvas.clientHeight;
-        canvas.width = Math.floor(w*dpr);
-        canvas.height = Math.floor(h*dpr);
-        ctx.setTransform(dpr,0,0,dpr,0,0);
-      }
-
-      function makeFlake(){
-        const r = rnd(1.2, 3.6);
-        return {
-          x: rnd(0,w),
-          y: rnd(-h,0),
-          r,
-          vy: rnd(0.35, 1.05) * (0.75 + r/3.6),
-          vx: rnd(-0.18, 0.18),
-          a: rnd(0.28, 0.75),
-          rot: rnd(0, Math.PI*2),
-          spin: rnd(-0.02, 0.02),
-          wob: rnd(0.6, 1.3),
-          seed: rnd(0, 9999)
-        };
-      }
-      function reset(f){
-        f.x = rnd(0,w);
-        f.y = rnd(-40,-10);
-      }
-
-      function drawFlake(f){
-        const arms = 6;
-        const len = f.r * 2.0;
-        ctx.save();
-        ctx.translate(f.x, f.y);
-        ctx.rotate(f.rot);
-        ctx.beginPath();
-        for(let i=0;i<arms;i++){
-          const ang = (Math.PI*2/arms)*i;
-          ctx.moveTo(0,0);
-          ctx.lineTo(Math.cos(ang)*len, Math.sin(ang)*len);
-
-          const bx = Math.cos(ang)*len*0.55;
-          const by = Math.sin(ang)*len*0.55;
-          const s = len*0.22;
-          ctx.moveTo(bx,by);
-          ctx.lineTo(bx + Math.cos(ang+Math.PI/3)*s, by + Math.sin(ang+Math.PI/3)*s);
-          ctx.moveTo(bx,by);
-          ctx.lineTo(bx + Math.cos(ang-Math.PI/3)*s, by + Math.sin(ang-Math.PI/3)*s);
-        }
-        ctx.stroke();
-        ctx.restore();
-      }
-
-      let last = performance.now();
-      let wind = 0, windTarget = 0;
-
-      function tick(t){
-        const dt = Math.min(32, t-last); last=t;
-
-        // плавный ветер
-        if(Math.random() < 0.012) windTarget = rnd(-0.35, 0.35);
-        wind += (windTarget - wind) * 0.02;
-
-        ctx.clearRect(0,0,w,h);
-        ctx.strokeStyle = "rgba(255,255,255,0.55)";
-        ctx.lineWidth = 1.05;
-        ctx.lineCap = "round";
-
-        for(const f of flakes){
-          const sway = Math.sin((f.y*0.012) + f.seed) * f.wob;
-          f.x += (f.vx + wind + sway*0.06) * (dt/16);
-          f.y += f.vy * (dt/16);
-          f.rot += f.spin * (dt/16);
-
-          if(f.y > h + 14) reset(f);
-          if(f.x < -40) f.x = w + 40;
-          if(f.x > w + 40) f.x = -40;
-
-          ctx.globalAlpha = f.a;
-          drawFlake(f);
-        }
-
-        ctx.globalAlpha = 1;
-        requestAnimationFrame(tick);
-      }
-
-      resize();
-      flakes.length = 0;
-      for(let i=0;i<COUNT;i++) flakes.push(makeFlake());
-      addEventListener("resize", resize, {passive:true});
-      requestAnimationFrame(tick);
-    })();
   </script>
 </body>
 </html>
